--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
+    "@hookform/resolvers": "^4.1.3",
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
@@ -21,7 +22,9 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
